2008-09-15  Werner Koch  <wk@g10code.com>

	* fips.c [HAVE_SYSLOG]: Include syslog.h.
	(_gcry_initialize_fips_mode, lock_fsm, unlock_fsm)
	(_gcry_fips_signal_error, fips_new_state)
	(_gcry_fips_noreturn) [HAVE_SYSLOG]: Also log via syslog.
	* global.h [HAVE_SYSLOG]: Include syslog.h.
	(_gcry_global_is_operational) [HAVE_SYSLOG]: Print warning.

	* global.c (_gcry_vcontrol): Use GCRYCTL_INITIALIZATION_FINISHED
	to run power-up tests.  Add unpublished control commands 58-60.

	* global.c (_gcry_global_is_operational): New.
	* g10lib.h (fips_is_operational): Change to call this function.

2008-09-12  Werner Koch  <wk@g10code.com>

	* fips.c (_gcry_fips_run_selftests): Add arg EXTENDED.
	(run_cipher_selftests, run_digest_selftests, run_hmac_selftests) 
	(run_pubkey_selftests): Ditto.
	* cipher-proto.h (selftest_func_t): Add arg EXTENDED

2008-09-11  Werner Koch  <wk@g10code.com>

	* fips.c: Include string.h.
	(loxtoi_1, loxtoi_2, loxdigit_p): New.
	(check_binary_integrity): Change the format of the expected file.

	* fips.c (_gcry_fips_run_selftests): Run random tests before the
	pubkey tests.

2008-09-05  Werner Koch  <wk@g10code.com>

	* gcrypt.h.in (GCYRCTL_SELFTEST): New.
	* global.c (_gcry_vcontrol): Implement.
	* fips.c (_gcry_fips_run_selftests): Do state transitions only if
	in fips mode.  Return an error code.

2008-09-01  Werner Koch  <wk@g10code.com>

	* stdmem.c: Re-indented.

2008-08-29  Werner Koch  <wk@g10code.com>

	* fips.c (_gcry_initialize_fips_mode): Changed /proc file to test
	for FIPS mode.

	* cipher-proto.h (pk_compute_keygrip_t): New.
	(pk_extra_spec): Add field comp_keygrip.

2008-08-28  Werner Koch  <wk@g10code.com>

	* hwfeatures.c (_gcry_detect_hw_features): Disable hardware
	detection in FIPS mode.

2008-08-27  Werner Koch  <wk@g10code.com>

	* global.c (_gcry_vcontrol): Allow running selftests from error
	state.
	(gcry_set_outofcore_handler): Only print a warning if used in FIPS
	mode.